create github pages

--- a/index.html
+++ b/index.html
@@ -832,9 +832,9 @@
                 <p><strong>Photo Credit</strong><br>© naturepl.com - Kevin Schafer - WWF<br>© Luis Barretophotos - WWF Colombia<br>© Javier Larotta - WWF<br>© Tarapoto - Jaime Rojo<br>© Adriano Gambarini - WWF Brazil&nbsp;<br></p>
             </div>
             <div class="col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br><br></p>
+                <p></p>
             </div>
-            <div class="col-xs-12 col-md-3"><strong>Links</strong></div>
+            <div class="col-xs-12 col-md-3"></div>
         </div>
     </div>
 </section>
